--- a/constituent_etl/etl_jupyternb.ipynb
+++ b/constituent_etl/etl_jupyternb.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Data Engineer exercises**\n",
     "- Date: 9/16/2020\n",
-    "- Purpose: ALS Data Engineer exercise\n"
+    "- Purpose: Sample ETL exercise with constituent data.\n"
    ]
   },
   {
@@ -86,14 +86,6 @@
    "source": [
     "%%javascript\n",
     "$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Purpose\n",
-    "This notebook contains exploratory data analysis and solutions to the Anne Lewis Strategies Hiring Data Engineer Extract Transform Load (ETL) Exercise."
    ]
   },
   {
