init random forest regressor

--- a/education_BI/Decision Tree Regressor.ipynb
+++ b/education_BI/Decision Tree Regressor.ipynb
@@ -4,13 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predictive Modeling in Ed\n",
+    "# Decision Tree Regressor\n",
     "- *Author*: Jai Miles\n",
-    "- *Date*: 12/12/2002\n",
-    "- *Purpose*: This notebook uses Random Forest to create a predictive model for student GPA\n",
+    "- *Date*: 12/12/2020\n",
+    "- *Purpose*: This notebook uses a Decision Tree Regressor to predict student GPA\n",
     "- *Data*: [Student Alcohol Consumption](https://www.kaggle.com/uciml/student-alcohol-consumption?select=student-por.csv)\n",
-    "\n",
-    "This dataset \n",
     "\n",
     "*Data Citation*:\n",
     "\n",
@@ -1631,18 +1629,6 @@
     "    filled = True\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
